--- a/BlazorApp/BlazorApp/Components/App.razor
+++ b/BlazorApp/BlazorApp/Components/App.razor
@@ -4,17 +4,26 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />
+    <base href="@BaseUrl" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="BlazorApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/humanistic-base.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <HeadOutlet @rendermode="@InteractiveWebAssembly" />
 </head>
 
 <body>
     <Routes @rendermode="@InteractiveWebAssembly" />
     <script src="_framework/blazor.web.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
 </body>
 
 </html>
+@code
+{
+    [CascadingParameter]
+    private HttpContext HttpContext { get; set; } = default!;
+    private string BaseUrl => $"{HttpContext.Request.PathBase}/";
+}
